--- a/assets/css/bootstrap-tagsinput.css
+++ b/assets/css/bootstrap-tagsinput.css
@@ -54,7 +54,7 @@
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 .bootstrap-tagsinput .tag.label-info {
-    background-color: red;
+    background-color: #e10a0a;
 }
 .bootstrap-tagsinput .tag.label {
     display: inline;
