--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 *, *:before, *:after {box-sizing:  border-box;}
 
 body{
-  font-family: 'Pontano Sans', sans-serif;
+ font-family: 'Montserrat', sans-serif;
+ font-weight: 400;
 }
 
 #topic-list{
