--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,3 +152,10 @@ ul {
   display: inline-block;
   padding-bottom: 20px;
 }
+
+.newsimage{
+  display:inline-block;
+  height: 200px;
+  width: 100%;
+}
+
