--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,10 +133,10 @@ body{
     }*/
 
 
-    .footerdiv{
- display: inline-block;
- text-align: end;
- width: 24%;
+  .footerdiv{
+     display: inline-block;
+     text-align: end;
+     width: 24%;
 }
 
 #footertopdiv{
@@ -151,6 +151,7 @@ ul {
 .urlDiv {
   display: inline-block;
   padding-bottom: 20px;
+  color: black;
 }
 
 .newsimage{
