--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,6 @@ body{
 }
 
 #footertopdiv{
-
   float: right;
 }
 
@@ -157,5 +156,12 @@ ul {
 .breaking-news-title a{
   font-size: 20px;
   color: black;
+}
+
+#breaking-news-header {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
 
