--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body{
   text-transform: uppercase;
   border-radius: 0;
   color:red;
+  font-size: 13px;
   border-right: solid 1px #e10a0a;
 }
 
@@ -93,12 +94,12 @@ body{
 .article-content{
   width: 100%;
   font-size: 20px;
-  margin-left: 3%;
+ /* margin-left: 3%*/;
 }
 
 
 #main-content-wrapper{
-  width: 90%;
+  width: 70%;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
@@ -117,6 +118,17 @@ body{
       padding: 10px;
     }
 
+@media screen and (max-width: 1380px) {
+  #main-content-wrapper{
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #main-content-wrapper{
+    width:95%;
+  }
+}
 
 @media screen and (max-width: 767px) {
   #logo-name{
@@ -167,7 +179,5 @@ ul {
 #breaking-news-header {
   background-color: red;
   color: white;
-  padding: 10px;
-  text-align: center;
 }
 
