--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,3 +292,9 @@ ul {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+
+.scrolling-news{
+  display:inline-block;
+  margin-right: 10px;
+  color: black;
+}
