--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,4 +297,13 @@ ul {
   display:inline-block;
   margin-right: 10px;
   color: black;
+  font-weight: 200;
+  text-decoration: none;
 }
+
+
+.scrolling-news a:hover{
+text-decoration: none;
+color: #e10a0a;
+}
+
