--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,21 +7,28 @@ body{
  background-image: url('../images/dust_@2X.png');
 }
 
+footer {
+  background-color: #333 ;
+  color: white;
+  padding: 10px;
+}
+
+
 .logo-box{
-z-index: 99;
-height: 60px;
-width: 60px;
-position:fixed;
-left:5;
-top:0;
-opacity: .8;
+  z-index: 99;
+  height: 60px;
+  width: 60px;
+  position:fixed;
+  left:5;
+  top:0;
+  opacity: .8;
 }
 
 .logo-holder{
   position: absolute;
   top: 0px;
-height: 60px;
-width: 60px;
+  height: 60px;
+  width: 60px;
 
 }
 
@@ -76,15 +83,15 @@ width: 60px;
 
 .article-title {
   border-bottom: 1px solid lightgray;
-    font-size: 20px;
-    font-weight: 500;
- 
+  font-size: 20px;
+  font-weight: 500;
+
 }
 
 
 .article-title a: hover{
-text-decoration: none;
-color: #e10a0a;
+  text-decoration: none;
+  color: #e10a0a;
 }
 
 
@@ -111,10 +118,10 @@ color: #e10a0a;
 .card{
  margin-top: 20px;
  padding: 20px;
-  border-radius: 0;
-  border: none;
-  background: #F7F7F9;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ border-radius: 0;
+ border: none;
+ background: #F7F7F9;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -133,7 +140,7 @@ color: #e10a0a;
   background-color: #333;
   min-height: 60px;
 
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -149,7 +156,7 @@ color: #e10a0a;
 }
 
 .navbar-toggler {
-   border: none;
+ border: none;
 }
 
 .navbar{
@@ -161,7 +168,7 @@ color: #e10a0a;
 }
 
 .navbar-toggler {
-   border: none;
+ border: none;
 }
 
 .article-content{
@@ -169,7 +176,7 @@ color: #e10a0a;
   font-size: 18px;
   font-weight: 200;
   color: grey;
- /* margin-left: 3%*/;
+  /* margin-left: 3%*/;
 }
 
 
@@ -190,20 +197,13 @@ color: #e10a0a;
   background: none;
 }
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 450px}
+.row.content {height: 450px}
 
- /* Set gray background color and 100% height */
-    .sidenav {
-      background-color: #f1f1f1 ;
-      height: 100%;
-    }
-
- /* Set black background color, white text and some padding */
-    footer {
-      background-color: #3e3f42 ;
-      color: white;
-      padding: 10px;
-    }
+/* Set gray background color and 100% height */
+.sidenav {
+  background-color: #f1f1f1 ;
+  height: 100%;
+}
 
 @media screen and (max-width: 1380px) {
   #main-content-wrapper{
@@ -223,7 +223,7 @@ color: #e10a0a;
   }
 }
 
- /* On small screens, set height to 'auto' for sidenav and grid */
+/* On small screens, set height to 'auto' for sidenav and grid */
   /*@media screen and (max-width: 767px) {
     .sidenav {
       height: auto;
@@ -242,77 +242,59 @@ color: #e10a0a;
    .scroll {
       height:450px;
       overflow-y: scroll;
-    }*/
+      }*/
 
-.footerdiv{
- display: inline-block;
- text-align: end;
- width: 24%;
-}
+      .breaking-news-scroll {
+        overflow-y: scroll; 
+        height:435px;
+      }
 
-#footertopdiv{
-  float: right;
-}
+      .breaking-news-title { 
+        border-bottom: 1px solid lightgray;
+        font-size: 15px;
+        font-weight: 200;
+        line-height: 1.2;
+      }
 
-ul {
-  list-style: none;
-}
+      .breaking-news-title a{
+        font-size: 14px;
+        color: black;
+      }
 
-
-.breaking-news-scroll {
-  overflow-y: scroll; 
-  height:435px;
-}
-
-.breaking-news-header{
-  width: 100%;
-}
-
-.breaking-news-title { 
-  border-bottom: 1px solid lightgray;
-    font-size: 15px;
-    font-weight: 200;
-    line-height: 1.2;
-}
-
-.breaking-news-title a{
-  font-size: 14px;
-  color: black;
-}
-
-.breaking-news-title a:hover{
-  text-decoration: none;
-  font-weight: 400;
-}
+      .breaking-news-title a:hover{
+        text-decoration: none;
+        font-weight: 400;
+      }
 
 
-#breaking-news-header {
-  background-color: #e10a0a;
-  /*margin: 20px;*/
-  border-radius: 0;
-  color: white;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  font-size: 16px;
-  text-align: center;
-  text-transform: uppercase;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+      #breaking-news-header {
+        background-color: #e10a0a;
+        /*margin: 20px;*/
+        width: 95%;
+        border-radius: 0;
+        color: white;
+        font-weight: 700;
+        letter-spacing: 1.5px;
+        font-size: 16px;
+        text-align: center;
+        text-transform: uppercase;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
 
 
-.scrolling-news{
-  display:inline-block;
-  margin-right: 10px;
-  color: black;
-  font-weight: 200;
-  text-decoration: none;
-}
+      .scrolling-news{
+        display:inline-block;
+        margin-right: 10px;
+        color: black;
+        font-weight: 200;
+        text-decoration: none;
+      }
 
 
-.scrolling-news a:hover{
-text-decoration: none;
-color: #e10a0a;
-}
+      .scrolling-news a:hover{
+        text-decoration: none;
+        color: #e10a0a;
+      }
 
 /*sets css for my account modal
 */
