--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ footer {
   background-color: none;
   border-color: #e10a0a;
   color: #e10a0a;
+  /*position: relative;*/
 }
 
 .save-btn:hover{
@@ -79,20 +80,15 @@ footer {
   font-size: 15px;
   font-weight: 200;
   color: #333;
-  position: relative;
+  /*position: relative;*/
 
 }
-
-.article-content-news {
-  overflow-y: scroll; 
-  /*height:800px;*/
-}
-
 
 .article-title {
   border-bottom: 1px solid lightgray;
   font-size: 18px;
   font-weight: 400;
+  width: 100%;
 }
 
 .article-title a:hover {
@@ -104,8 +100,6 @@ footer {
   font-size: 12px;
   font-weight: 500;  
   text-transform: uppercase;
-  /*position: absolute;*/
-  top: 10px;
 }
 
 .card-header{
@@ -188,6 +182,10 @@ footer {
   background: none;
 }
 
+.img-article{
+  width: 100px;
+  height: 100px;
+}
 
 .breaking-news-scroll {
   overflow-y: scroll; 
