--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 *, *:before, *:after {box-sizing:  border-box;}
 
+html, body{
+  /*used for sticky footer*/
+  height: 100%;
+}
+
 body{
+  min-height: 30%;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  line-height: 1.7;
@@ -10,7 +16,9 @@ body{
 footer {
   background-color: #333 ;
   color: white;
-  padding: 10px;
+  padding: 7px;
+  position: relative;
+  font-size: 12px;
 }
 
 
@@ -153,12 +161,13 @@ footer {
   color: grey;
 }
 
-#article-container{
-  background: none;
+#main{
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
 
-#main-content-wrapper{
-  width: 70%;
+#article-container{
+  background: none;
 }
 
 #log-in-error { 
@@ -228,20 +237,6 @@ footer {
   color: #e10a0a;
 }
 
-/*sets css for log in/sign up modal*/
-#log-in-button {
-  background-color: #e10a0a;
-  border-color: #e10a0a;
-}
-
-#log-in-button:hover {
-  color: #ccc;
-}
-
-#log-in-error {
-  margin-top: 15px;
-}
-
 /*sets css for my account modal*/
 .my-account-container {
   width: 90%;
@@ -264,13 +259,13 @@ footer {
 
 @media screen and (max-width: 1024px) {
   #main-content-wrapper{
-    width:90%;
+    width:70%;
   }
 }
 
 @media screen and (min-width: 980px) {
   #main-content-wrapper{
-    width: 95%;
+    width: 70%;
   }  
   .navbar{
     height: 60px;
@@ -280,5 +275,8 @@ footer {
 @media screen and (max-width: 767px) {
   #logo-name{
     color: #333;
+  }
+  #main-content-wrapper{
+    width: 95%;
   }
 }
